# rinha2025-django

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  redis.conf  scheduler_service.py
db/conf/: pg_hba.conf  postgresql.conf
db/init/: 01_create_payments_table.sql
nginx/: nginx.conf
payments/: __init__.py  models.py  schemas.py  tasks.py  urls.py  utils.py
payments/fixtures/: payments.json
payments_summary/: apps.py  urls.py
rinha2025/: asgi.py  settings.py  urls.py  wsgi.py
